Add Redis (distributed cache)

--- a/BlazorServer/appsettings.json
+++ b/BlazorServer/appsettings.json
@@ -8,6 +8,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "BlazorServerIdentityContextConnection": "Server=.;Database=BlazorServerIdentity;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "BlazorServerIdentityContextConnection": "Server=.;Database=BlazorServerIdentity;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "Redis": "localhost:5002"
   }
 }
